# notist

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build_and_deploy_docs.yml  lint_and_format.yml  mypy_check.yml  tests.yml
docs/: api.rst  conf.py  guides.rst  index.rst  quickstart.rst  versions.py
docs/_static/css/: custom.css
docs/api/: base_notifier.rst  core_utils.rst  discord_notifier.rst  slack_notifier.rst
docs/guides/: discord_setup.rst  slack_setup.rst
notifyend/: __init__.py  _base.py  _core.py  _discord.py  _log.py  _slack.py
notifyend/_notifiers/: base.py  core.py  discord.py  slack.py
notifyme/: __init__.py  _base.py  _core.py  _discord.py  _log.py  _slack.py  _utils.py  slack.py
notifystate/: __init__.py  _core.py  _log.py  _utils.py  _watch.py
notifystate/_notifiers/: __init__.py  base.py  core.py  discord.py  slack.py
notist/: __init__.py  _core.py  _log.py  _utils.py  _watch.py
notist/_notifiers/: base.py  discord.py  slack.py
tests/: test_core.py  test_discord.py  test_slack.py  test_utils.py
tests/notifiers_test/: test_core.py  test_discord.py  test_slack.py
