[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notist"
description = "A simple package to send notifications of script execution status."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kaito Baba", email = "k.ai.to47802@gmail.com" }]
urls = { Homepage = "https://github.com/kaito47802/notist" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "notification", "alert", "slack", "discord",
    "messaging", "bot", "monitoring", "automation",
    "development", "productivity",
    "kaggle", "data-science", "machine-learning",
    "deep-learning", "ai", "artificial-intelligence",
]
dependencies = [
    "slack_sdk>=3.33.1",
    "requests>=2.28.1",
    "typing-extensions",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
check = ["ruff", "mypy", "types-setuptools", "types-requests"]
test = ["pytest"]
docs = [
    # Sphinx 9 introduced many breaking changes, and some extensions such as sphinx-toolbox is not compatible with it yet.
    # Therefore, we stick to Sphinx 8 for now.
    # See: https://github.com/sphinx-toolbox/sphinx-toolbox/issues/201
    "sphinx==8.2.3",
    "sphinx-autodoc-typehints",
    "pydata_sphinx_theme",
    "sphinx-copybutton",
    "sphinx-toolbox",
]


[tool.setuptools.dynamic]
version = { attr = "notist.__version__" }

[tool.setuptools.packages.find]
include = ["notist*"]

[tool.ruff.lint]
select = ["E","W","F","I", "UP", "N", "SIM", "PERF", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
extra_checks = true
no_implicit_reexport = true
ignore_missing_imports = true
exclude = [".venv", "venv", "^build/"]
